@@ -363,7 +363,7 @@ endif
 	if [ -n "`find $(DPKGDIR)/info/ -name \\*.templates`" ]; then \
 		cat $(DPKGDIR)/info/*.templates >> all-$(TYPE).utf; \
 	fi
-	find $(TREE) -type f | xargs strings >> all-$(TYPE).utf
+	#find $(TREE) -type f | xargs strings >> all-$(TYPE).utf
 
 ifeq ($(TYPE),floppy)
 	# Remove additional driver disk contents now that we're done with
@@ -385,7 +385,10 @@ unifont-reduced-$(TYPE).bdf: all-$(TYPE).utf
 	        echo "error: Trying to build unifont.bgf without rootskel-locale!"; \
 	        exit 1; \
 	    fi
-	LOCPATH=$(LOCALE_PATH) LC_ALL=C.UTF-8 reduce-font /usr/src/unifont.bdf < all-$(TYPE).utf > $@.tmp
+	# Grepping out some encodings that confuse reduce-font.
+	# This is a temporary fix.
+	grep -v ISO-8859- all-$(TYPE).utf | grep -v EUC-JP | grep -v CP1251 | \
+		LOCPATH=$(LOCALE_PATH) LC_ALL=C.UTF-8 reduce-font /usr/src/unifont.bdf > $@.tmp
 	mv $@.tmp $@
 
 $(TREE)/unifont.bgf: unifont-reduced-$(TYPE).bdf
